<resources>
    <string name="app_name">Vacinas</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="usuario_exemplo_com">usuario@exemplo.com</string>
    <string name="pass">..............</string>
    <string name="logar">LOGAR</string>
    <string name="email">Email</string>
    <string name="ainda_n_o_possui_cadastro_clique_aqui">AINDA NÃO POSSUI CADASTRO? CLIQUE AQUI</string>
    <string name="entrar">ENTRAR</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="perfil">perfil</string>
    <string name="informa_es_da_sua_vacina_o">Informações da sua vacinação</string>
    <string name="vacina_o">VACINAÇÃO</string>
    <string name="menu_icon">menu_icon</string>
    <string name="profi">profi</string>
    <string name="confirme_sua_segunda_dose">Confirme sua segunda dose:</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="senha">Senha</string>
    <string name="tela_de_login">TELA DE LOGIN</string>
    <string name="tela_de_cadastro">TELA DE CADASTRO</string>
    <string name="textview">TextView</string>
    <string name="menu_i">menu_i</string>
    <string name="nomed">Nome:</string>
    <string name="emaild">Email:</string>
    <string name="idade">Idade: </string>
    <string name="idaded">Idade:</string>
    <string name="delete_icon">delete_icon</string>
    <string name="edit_icon">edit_icon</string>
    <string name="suas_informa_es_de_perfil">Suas informações de perfil:</string>
    <string name="suas_informa_es_de_vacina_o">Suas informações de vacinação:</string>
    <string name="ubs">UBS:</string>
    <string name="marcad">Marca:</string>
    <string name="dosed">Dose:</string>
    <string name="datad">Data:</string>
    <string name="voltar_icon">voltar_icon</string>
    <string name="nome">Nome</string>
    <string name="nome_da_ubs">Nome da UBS</string>
    <string name="marca">Marca</string>
    <string name="dose_tomada">Dose tomada</string>
    <string name="data">Data</string>
    <string name="image">image</string>
    <string name="alterar_dados">Alterar dados</string>
    <string name="excluir_dados">Excluir dados</string>
    <string name="alterar_dadosb">ALTERAR DADOS</string>
    <string name="editar">EDITAR</string>
    <string name="Alterar">Alterar</string>
</resources>