<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityUser">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_dehaze_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_tela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/vacina_o"
        android:textColor="#1C1B1B"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/informa_es_da_sua_vacina_o"
        android:textColor="#2B2A2A"
        android:textSize="16sp"
        app:fontFamily="@font/comfortaa" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="250dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="#7E7E73"
            app:cardCornerRadius="250dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@mipmap/prof_round" />

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="375dp"
        android:layout_height="126dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="180dp"
        app:cardBackgroundColor="#AFAFB3"
        app:cardCornerRadius="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/confirme_sua_segunda_dose"
        android:textColor="#2B2A2A"
        android:textSize="16sp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="375dp"
        android:layout_height="126dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="380dp"
        app:cardBackgroundColor="#7896B3"
        app:cardCornerRadius="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>